--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "name": "Moopa",
-    "short_name": "moopa",
+    "name": "ANIMETV7",
+    "short_name": "ANIMETV",
     "description": "Watch and Read your favorite Anime/Manga in one single app",
     "icons": [
         {
